# bubblewrap

./: CMakeLists.txt  bubblewrap.c  utils.c
docker/centos-7/: Dockerfile
docker/rockylinux-8.8/: Dockerfile
include/bwrap/: bwrap.h
packaging/: bubblewrap.spec
src/: bind-mount.c  bwrap.c  main.c  network.c
